fix sticky navbar covering top of sections when using anchors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,6 +46,7 @@
 
   
 section {
+  scroll-margin-top: 15vh;
   /* max-width: 1100px;
   margin: auto; */
 }
@@ -173,7 +174,7 @@ nav ul li {
 .projects {
   background-color: var(--bg-color);
   padding: 32px 0;
-  margin-top: 2rem;
+  margin-top: 2.5rem;
 }
 
 .project-pic {
@@ -200,7 +201,7 @@ nav ul li {
 }
 
 .project-container p {
-  padding: 0.4rem;
+  padding: 0.4rem ;
 }
 
 .project-title {
